# gov-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  HISTORY.md  LICENSE  README.md  README_PLUGIN.md  SOUL.md  manifest.json  plugin.json  pyproject.toml  verify_dispatch.py
.claude/: settings.json
docs/: PROTOCOL.md  QUICKSTART_CREWAI.md  QUICKSTART_PYTHON.md  gov_health.md
gov_mcp/: __main__.py  amendment_009_010_tools.py  cli.py  dispatch_logic.py  health.py  plugin_tools.py  router.py  server.py  server.py.bak.1776016253  server.py.bak.delegations.1776016253
gov_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/: SIM-001_scenario3_results.json  SIM-001_scenarios_1245_results.json  health_validation_report.json  stress_test_results.md
scripts/: validate_health_historical.py
tests/: conftest.py  test_concurrent_stress.py  test_contract_conflicts.py  test_e2e_flow.py  test_exploration.py  test_final_tools.py  test_gov_dispatch.py  test_gov_mcp_delegation.py  test_internal_mechanisms_live.py  test_layer1_bypass_vectors.py  test_layer2_cieu_chain.py  test_layer3_delegation.py  test_layer4_omission.py  test_layer5_metalearning.py  test_layer6_pearl_l3.py  test_layer7_8_health_install.py  test_market_experiments.py  test_market_secret_exposure.py  test_merged_stress.py  test_new_tools.py  test_p0_infra.py  test_p0_security.py  test_p1_fixes.py  test_p1_omission_fixes.py  test_plugin_tools.py  test_sim001_remaining.py  test_sim001_scenario3.py
