[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-mcp"
version = "0.1.0"
description = "Governed execution layer for AI agents — MCP server with Y*gov runtime enforcement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "ystar>=0.48.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
gov-mcp = "gov_mcp.cli:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gov_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
